fix:update Spark